fixed layout bugs

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -124,7 +124,7 @@ button.gamemode:hover {
 
 .side-select {
   width: 100px;
-  height: 30px;
+  height: 34px;
   margin: auto 0.25rem;
   border-radius: 8px;
   border: 3px solid #eaecee;
@@ -182,7 +182,17 @@ button.gamemode:hover {
   align-items: center;
 }
 
+.cancel-btn:hover {
+  color: inherit;
+}
+
 .create-post-btn {
   background-color: #0173fa;
   color: #eaecee;
+  opacity: 75%;
+  transition: opacity 0.25s ease;
+}
+
+.create-post-btn:hover {
+  opacity: 100%;
 }
